fixed gap

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -748,7 +748,7 @@ img {
 
 /* Project Cards */
 .projects-hero {
-    padding-top: 80px;
+    padding-top: 120px;
     text-align: center;
     background-color: var(--background-color);
     padding-bottom: 1rem;
